Modify some things like    hide toolbar symfony in dev (server is difiult to clean cache prod)    make the password more secure    some colors    some icons    some validators translations files    some styles

--- a/config/packages/fos_user.yaml
+++ b/config/packages/fos_user.yaml
@@ -16,3 +16,6 @@ fos_user:
     resetting:
         email:
             template: '@FOSUser/Resetting/email.email.twig'
+    profile:
+        form:
+            validation_groups:   [Profile, ResetPassword, Registration, ChangePassword]
