--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,5 +24,9 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
+    App\Controller\SecurityController:
+        arguments:
+            $registrationController: '@fos_user.registration.controller'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
