Fixing links to remote resources(imgs, videos)

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -4,3 +4,4 @@ twig:
     strict_variables: '%kernel.debug%'
     globals:
         recaptcha: '%env(RECAPTCHA_CLIENT)%'
+        resources_url: '%env(RESOURCES_URL)%'
