--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -12,6 +12,7 @@ framework:
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
     session:
+        name: 'Infotaller'
         handler_id: ~
         cookie_secure: auto
         cookie_samesite: lax
